# glkterm

./: .gitignore  AUTOSAVE_IMPLEMENTATION_PLAN.md  AUTOSAVE_PROGRESS.md  CMakeLists.txt  DESIGN_AUTOSAVE.md  README.md  UNIT_TESTING_COMPLETE.md  glkterm.sln  test_version  test_version.c
glkterm/: glkterm.h  glkunix_autosave.h  gtautosave.c  gtevent.c  gtfref.c  gtstream.c  gtwindow.c
launcher/: LAUNCHER_DESIGN.md  README.md  launcher.c  launcher.h  launcher_cli.c  launcher_cli.h  launcher_config.c  launcher_config.h  launcher_detect.c  launcher_detect.h
launcher/glkcli/: main.c
launcher_rust/: Cargo.toml  README.md  build.sh  test.sh
launcher_rust/src/: config.rs  detect.rs  launcher.rs  main.rs
terps/: CMakeLists.txt  README.md
terps/agility/: os_glk.c
terps/c64diskimage/: CMakeLists.txt
terps/glulxe/: unixautosave.c  unixstrt.c
terps/taylor/: player.c
terps/unp64/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  test_content_restoration.c  test_fileref_serialization.c  test_glkstate_simple.c  test_graphics_serialization.c  test_hierarchy_roundtrip.c  test_integration.c  test_serialization.c  test_stream_serialization.c  test_stubs.c  test_unserialization.c  test_updatetags.c  test_window_hierarchy.c  test_window_serialization.c
